--- a/PAgweb.html
+++ b/PAgweb.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Lista de cursos de DevOPS de Alura </title>
+     <title> Lista de Cursos de DevOPS de Alura </title>
 </head>
 <body>
      <ul>
