Modificando el nombre del curso de ansible

--- a/PAgweb.html
+++ b/PAgweb.html
@@ -8,9 +8,8 @@
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-
-         <li> Ansible </li>
-         <li> Integracion continua: MAdurex y productividad en el desarrollo de software </li>
+         <li> Ansible: Su Infraestructura como codigo </li>
+         <li> Integracion continua: Madurex y productividad en el desarrollo de software </li>
          <li> Kubernetes: Introduccion a la orquestacion de containers </li>
      </ul>
 </body>
